# beep_maker

./: .gitignore  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: lint.yml  test.yml
src/: __init__.py
src/cli/: commands.py
src/config/: __init__.py  constants.py
src/generator/: __init__.py  envelope.py  sounds.py  waveforms.py
src/utils/: __init__.py  wav_writer.py
tests/generator/: __init__.py  test_envelope.py  test_sounds.py  test_waveforms.py
tests/utils/: test_wav_writer.py
